--- a/BollingerBand_Trade_Management.ipynb
+++ b/BollingerBand_Trade_Management.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
        "[250 rows x 5 columns]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,14 +198,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Yichao Hou\\AppData\\Local\\Temp\\ipykernel_18784\\1745453865.py:2: SettingWithCopyWarning: \n",
+      "C:\\Users\\Yichao Hou\\AppData\\Local\\Temp\\ipykernel_23416\\1745453865.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1197,7 +1197,7 @@
        "2023-07-28 00:00:00-04:00  301.559999  328.533825   17.889525    0.943393  "
       ]
      },
-     "execution_count": 54,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1214,7 +1214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1223,7 +1223,7 @@
        "(51, 12)"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1235,17 +1235,236 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "def add_sma_signal(df, backcandles):\n",
-    "    sma_signal = [0] * len(df)\n",
+    "    sma_signal = [0]*len(df)\n",
     "    for row in range(backcandles, len(df)):\n",
-    "        upt = 1\n",
-    "        dnt = 1\n",
+    "        upt = 1     # uptrend\n",
+    "        dnt = 1     # downtrend\n",
+    "        # backcandles are continous candles we want to compare with sma line\n",
+    "        # to get the trend of the stock price\n",
     "        for i in range(row-backcandles, row+1):\n",
-    "            "
+    "            if df.High[i]>=df.SMA[i]: # if highest price of candle is larger than SMA, it's an uptrend\n",
+    "                dnt=0\n",
+    "            if df.Low[i]<=df.SMA[i]: # if lowest price of candle is smaller than SMA, it's a downtrend\n",
+    "                upt=0\n",
+    "        if upt==1 and dnt==1:\n",
+    "            sma_signal[row]=3 # Hold the Stok\n",
+    "        elif upt==1:\n",
+    "            sma_signal[row]=2 # Buying Signal\n",
+    "        elif dnt==1:\n",
+    "            sma_signal[row]=1 # Selling Signal\n",
+    "    df['SMA_Signal'] = sma_signal\n",
+    "\n",
+    "add_sma_signal(meta_df, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>SMA</th>\n",
+       "      <th>RSI</th>\n",
+       "      <th>BBL_20_2.5</th>\n",
+       "      <th>BBM_20_2.5</th>\n",
+       "      <th>BBU_20_2.5</th>\n",
+       "      <th>BBB_20_2.5</th>\n",
+       "      <th>BBP_20_2.5</th>\n",
+       "      <th>SMA_Signal</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2023-07-21 00:00:00-04:00</th>\n",
+       "      <td>304.570007</td>\n",
+       "      <td>305.459991</td>\n",
+       "      <td>291.200012</td>\n",
+       "      <td>294.260010</td>\n",
+       "      <td>42089700</td>\n",
+       "      <td>186.69745</td>\n",
+       "      <td>8.756177</td>\n",
+       "      <td>268.229716</td>\n",
+       "      <td>296.521500</td>\n",
+       "      <td>324.813283</td>\n",
+       "      <td>19.082450</td>\n",
+       "      <td>0.460033</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-07-24 00:00:00-04:00</th>\n",
+       "      <td>295.779999</td>\n",
+       "      <td>297.519989</td>\n",
+       "      <td>288.299988</td>\n",
+       "      <td>291.609985</td>\n",
+       "      <td>24915700</td>\n",
+       "      <td>187.45410</td>\n",
+       "      <td>6.637435</td>\n",
+       "      <td>268.578797</td>\n",
+       "      <td>296.665498</td>\n",
+       "      <td>324.752200</td>\n",
+       "      <td>18.934930</td>\n",
+       "      <td>0.410002</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-07-25 00:00:00-04:00</th>\n",
+       "      <td>295.190002</td>\n",
+       "      <td>298.299988</td>\n",
+       "      <td>291.859985</td>\n",
+       "      <td>294.470001</td>\n",
+       "      <td>19585600</td>\n",
+       "      <td>188.23155</td>\n",
+       "      <td>38.669679</td>\n",
+       "      <td>271.332993</td>\n",
+       "      <td>297.465498</td>\n",
+       "      <td>323.598004</td>\n",
+       "      <td>17.570109</td>\n",
+       "      <td>0.442686</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-07-26 00:00:00-04:00</th>\n",
+       "      <td>301.190002</td>\n",
+       "      <td>301.769989</td>\n",
+       "      <td>291.899994</td>\n",
+       "      <td>298.570007</td>\n",
+       "      <td>47256900</td>\n",
+       "      <td>189.02905</td>\n",
+       "      <td>69.082793</td>\n",
+       "      <td>272.599122</td>\n",
+       "      <td>298.041499</td>\n",
+       "      <td>323.483877</td>\n",
+       "      <td>17.073044</td>\n",
+       "      <td>0.510386</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-07-27 00:00:00-04:00</th>\n",
+       "      <td>325.119995</td>\n",
+       "      <td>325.350006</td>\n",
+       "      <td>309.839996</td>\n",
+       "      <td>311.709991</td>\n",
+       "      <td>64229200</td>\n",
+       "      <td>189.92035</td>\n",
+       "      <td>92.600933</td>\n",
+       "      <td>273.985756</td>\n",
+       "      <td>299.362498</td>\n",
+       "      <td>324.739241</td>\n",
+       "      <td>16.953856</td>\n",
+       "      <td>0.743284</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-07-28 00:00:00-04:00</th>\n",
+       "      <td>316.880005</td>\n",
+       "      <td>326.200012</td>\n",
+       "      <td>314.250000</td>\n",
+       "      <td>325.480011</td>\n",
+       "      <td>39160700</td>\n",
+       "      <td>190.87880</td>\n",
+       "      <td>97.147962</td>\n",
+       "      <td>274.586173</td>\n",
+       "      <td>301.559999</td>\n",
+       "      <td>328.533825</td>\n",
+       "      <td>17.889525</td>\n",
+       "      <td>0.943393</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                 Open        High         Low       Close  \\\n",
+       "Date                                                                        \n",
+       "2023-07-21 00:00:00-04:00  304.570007  305.459991  291.200012  294.260010   \n",
+       "2023-07-24 00:00:00-04:00  295.779999  297.519989  288.299988  291.609985   \n",
+       "2023-07-25 00:00:00-04:00  295.190002  298.299988  291.859985  294.470001   \n",
+       "2023-07-26 00:00:00-04:00  301.190002  301.769989  291.899994  298.570007   \n",
+       "2023-07-27 00:00:00-04:00  325.119995  325.350006  309.839996  311.709991   \n",
+       "2023-07-28 00:00:00-04:00  316.880005  326.200012  314.250000  325.480011   \n",
+       "\n",
+       "                             Volume        SMA        RSI  BBL_20_2.5  \\\n",
+       "Date                                                                    \n",
+       "2023-07-21 00:00:00-04:00  42089700  186.69745   8.756177  268.229716   \n",
+       "2023-07-24 00:00:00-04:00  24915700  187.45410   6.637435  268.578797   \n",
+       "2023-07-25 00:00:00-04:00  19585600  188.23155  38.669679  271.332993   \n",
+       "2023-07-26 00:00:00-04:00  47256900  189.02905  69.082793  272.599122   \n",
+       "2023-07-27 00:00:00-04:00  64229200  189.92035  92.600933  273.985756   \n",
+       "2023-07-28 00:00:00-04:00  39160700  190.87880  97.147962  274.586173   \n",
+       "\n",
+       "                           BBM_20_2.5  BBU_20_2.5  BBB_20_2.5  BBP_20_2.5  \\\n",
+       "Date                                                                        \n",
+       "2023-07-21 00:00:00-04:00  296.521500  324.813283   19.082450    0.460033   \n",
+       "2023-07-24 00:00:00-04:00  296.665498  324.752200   18.934930    0.410002   \n",
+       "2023-07-25 00:00:00-04:00  297.465498  323.598004   17.570109    0.442686   \n",
+       "2023-07-26 00:00:00-04:00  298.041499  323.483877   17.073044    0.510386   \n",
+       "2023-07-27 00:00:00-04:00  299.362498  324.739241   16.953856    0.743284   \n",
+       "2023-07-28 00:00:00-04:00  301.559999  328.533825   17.889525    0.943393   \n",
+       "\n",
+       "                           SMA_Signal  \n",
+       "Date                                   \n",
+       "2023-07-21 00:00:00-04:00           2  \n",
+       "2023-07-24 00:00:00-04:00           2  \n",
+       "2023-07-25 00:00:00-04:00           2  \n",
+       "2023-07-26 00:00:00-04:00           2  \n",
+       "2023-07-27 00:00:00-04:00           2  \n",
+       "2023-07-28 00:00:00-04:00           2  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "meta_df.tail(6)"
    ]
   }
  ],
