--- a/Algo Trading Book/Chapter 5_Regime Definition.ipynb
+++ b/Algo Trading Book/Chapter 5_Regime Definition.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,11 +14,158 @@
     "import matplotlib.pyplot as plt\n",
     "from scipy.signal import find_peaks"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Graph Regimes ###\n",
+    "def graph_regime_combo(ticker,df,_c,rg,lo,hi,slo,shi,clg,flr,rg_ch,\n",
+    "                       ma_st,ma_mt,ma_lt,lt_lo,lt_hi,st_lo,st_hi):\n",
+    "    \n",
+    "    '''\n",
+    "    https://www.color-hex.com/color-names.html\n",
+    "    ticker,df,_c: _c is closing price\n",
+    "    rg: regime -1/0/1 using floor/ceiling method\n",
+    "    lo,hi: small, noisy highs/lows\n",
+    "    slo,shi: swing lows/highs\n",
+    "    clg,flr: ceiling/floor\n",
+    "    \n",
+    "    rg_ch: regime change base\n",
+    "    ma_st,ma_mt,ma_lt: moving averages ST/MT/LT\n",
+    "    lt_lo,lt_hi: range breakout High/Low LT \n",
+    "    st_lo,st_hi: range breakout High/Low ST \n",
+    "    '''\n",
+    "    fig = plt.figure(figsize=(20,8))\n",
+    "    ax1 = plt.subplot2grid((1,1), (0,0))\n",
+    "    date = df.index\n",
+    "    close = df[_c]\n",
+    "    ax1.plot_date(df.index, close,'-', color='k',  label=ticker.upper()) \n",
+    "    try:\n",
+    "        if pd.notnull(rg):  \n",
+    "            base = df[rg_ch]\n",
+    "            regime = df[rg]\n",
+    "\n",
+    "            if df[lo].count()>0:\n",
+    "                ax1.plot(df.index, df[lo],'.' ,color='r', label= 'swing low',alpha= 0.6)\n",
+    "            if df[hi].count()>0:\n",
+    "                ax1.plot(df.index, df[hi],'.' ,color='g', label= 'swing high',alpha= 0.6)        \n",
+    "            if df[slo].count()>0:\n",
+    "                ax1.plot(df.index, df[slo],'o' ,color='r', label= 'swing low',alpha= 0.8)\n",
+    "            if df[shi].count()>0:\n",
+    "                ax1.plot(df.index, df[shi],'o' ,color='g', label= 'swing high',alpha= 0.8)\n",
+    "            if df[flr].count()>0:\n",
+    "                plt.scatter(df.index, df[flr],c='k',marker='^',label='floor')\n",
+    "            if df[clg].count() >0:\n",
+    "                plt.scatter(df.index, df[clg],c='k',marker='v',label='ceiling')\n",
+    "\n",
+    "            ax1.plot([],[],linewidth=5, label= 'bear', color='m',alpha=0.1)\n",
+    "            ax1.plot([],[],linewidth=5 , label= 'bull', color='b',alpha=0.1)\n",
+    "            ax1.fill_between(date, close, base,where=((regime==1)&(close > base)), facecolor='b', alpha=0.1)\n",
+    "            ax1.fill_between(date, close, base,where=((regime==1)&(close < base)), facecolor='b', alpha=0.4)\n",
+    "            ax1.fill_between(date, close, base,where=((regime==-1)&(close < base)), facecolor='m', alpha=0.1)\n",
+    "            ax1.fill_between(date, close, base,where=((regime==-1)&(close > base)), facecolor='m', alpha=0.4)\n",
+    "\n",
+    "        if np.sum(ma_st) >0 :\n",
+    "            ax1.plot(df.index,ma_st,'-' ,color='lime', label= 'ST MA')\n",
+    "            ax1.plot(df.index,ma_mt,'-' ,color='green', label= 'MT MA')\n",
+    "            ax1.plot(df.index,ma_lt,'-' ,color='red', label= 'LT MA')\n",
+    "\n",
+    "            if pd.notnull(rg): # floor/ceiling regime present\n",
+    "                # Profitable conditions\n",
+    "                ax1.fill_between(date,close, ma_mt,where=((regime==1)&(ma_mt >= ma_lt)&(ma_st>=ma_mt)), \n",
+    "                             facecolor='green', alpha=0.5) \n",
+    "                ax1.fill_between(date,close, ma_mt,where=((regime==-1)&(ma_mt <= ma_lt)&(ma_st <= ma_mt)), \n",
+    "                             facecolor='red', alpha=0.5)\n",
+    "                # Unprofitable conditions\n",
+    "                ax1.fill_between(date,close, ma_mt,where=((regime==1)&(ma_mt>=ma_lt)&(ma_st>=ma_mt)&(close<ma_mt)), \n",
+    "                             facecolor='darkgreen', alpha=1) \n",
+    "                ax1.fill_between(date,close, ma_mt,where=((regime==-1)&(ma_mt<=ma_lt)&(ma_st<=ma_mt)&(close>=ma_mt)), \n",
+    "                             facecolor='darkred', alpha=1)\n",
+    "\n",
+    "            elif pd.isnull(rg): # floor/ceiling regime absent\n",
+    "                 # Profitable conditions\n",
+    "                ax1.fill_between(date,close, ma_mt,where=((ma_mt >= ma_lt)&(ma_st>=ma_mt)), \n",
+    "                             facecolor='green', alpha=0.4) \n",
+    "                ax1.fill_between(date,close, ma_mt,where=((ma_mt <= ma_lt)&(ma_st <= ma_mt)), \n",
+    "                             facecolor='red', alpha=0.4)\n",
+    "                # Unprofitable conditions\n",
+    "                ax1.fill_between(date,close, ma_mt,where=((ma_mt >= ma_lt)&(ma_st >= ma_mt)&(close < ma_mt)), \n",
+    "                             facecolor='darkgreen', alpha=1) \n",
+    "                ax1.fill_between(date,close, ma_mt,where=((ma_mt <= ma_lt)&(ma_st <= ma_mt)&(close >= ma_mt)), \n",
+    "                             facecolor='darkred', alpha=1)\n",
+    "\n",
+    "        if (np.sum(lt_hi) > 0): # LT range breakout\n",
+    "            ax1.plot([],[],linewidth=5, label= ' LT High', color='m',alpha=0.2)\n",
+    "            ax1.plot([],[],linewidth=5, label= ' LT Low', color='b',alpha=0.2)\n",
+    "\n",
+    "            if pd.notnull(rg): # floor/ceiling regime present\n",
+    "                ax1.fill_between(date, close, lt_lo,\n",
+    "                                 where=((regime ==1) & (close > lt_lo) ), \n",
+    "                                 facecolor='b', alpha=0.2)\n",
+    "                ax1.fill_between(date,close, lt_hi,\n",
+    "                                 where=((regime ==-1) & (close < lt_hi)), \n",
+    "                                 facecolor='m', alpha=0.2)\n",
+    "                if (np.sum(st_hi) > 0): # ST range breakout\n",
+    "                    ax1.fill_between(date, close, st_lo,\n",
+    "                                     where=((regime ==1)&(close > st_lo) ), \n",
+    "                                     facecolor='b', alpha=0.3)\n",
+    "                    ax1.fill_between(date,close, st_hi,\n",
+    "                                     where=((regime ==-1) & (close < st_hi)), \n",
+    "                                     facecolor='m', alpha=0.3)\n",
+    "\n",
+    "            elif pd.isnull(rg): # floor/ceiling regime absent           \n",
+    "                ax1.fill_between(date, close, lt_lo,\n",
+    "                                 where=((close > lt_lo) ), facecolor='b', alpha=0.2)\n",
+    "                ax1.fill_between(date,close, lt_hi,\n",
+    "                                 where=((close < lt_hi)), facecolor='m', alpha=0.2)\n",
+    "                if (np.sum(st_hi) > 0): # ST range breakout\n",
+    "                    ax1.fill_between(date, close, st_lo,\n",
+    "                                     where=((close > st_lo) & (st_lo >= lt_lo)), facecolor='b', alpha=0.3)\n",
+    "                    ax1.fill_between(date,close, st_hi,\n",
+    "                                     where=((close < st_hi)& (st_hi <= lt_hi)), facecolor='m', alpha=0.3)\n",
+    "\n",
+    "            if (np.sum(st_hi) > 0): # ST range breakout\n",
+    "                ax1.plot([],[],linewidth=5, label= ' ST High', color='m',alpha=0.3)\n",
+    "                ax1.plot([],[],linewidth=5, label= ' ST Low', color='b',alpha=0.3)\n",
+    "\n",
+    "            ax1.plot(df.index, lt_lo,'-.' ,color='b', label= 'LT low',alpha=0.2)\n",
+    "            ax1.plot(df.index, lt_hi,'-.' ,color='m', label= 'LT high',alpha=0.2)\n",
+    "    except:\n",
+    "        pass\n",
+    "    \n",
+    "    for label in ax1.xaxis.get_ticklabels():\n",
+    "        label.set_rotation(45)\n",
+    "    ax1.grid(True)\n",
+    "    ax1.xaxis.label.set_color('k')\n",
+    "    ax1.yaxis.label.set_color('k')\n",
+    "    plt.xlabel('Date')\n",
+    "    plt.ylabel(str.upper(ticker) + ' Price')\n",
+    "    plt.title(str.upper(ticker))\n",
+    "    plt.legend()\n",
+    "### Graph Regimes Combo ###"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.4"
   },
   "orig_nbformat": 4
  },
