--- a/Algo Trading Book/Chapter 5_Regime Definition.ipynb
+++ b/Algo Trading Book/Chapter 5_Regime Definition.ipynb
@@ -498,6 +498,13 @@
     "ticker = \"META\"\n",
     "graph_regime_combo(ticker,df,_c,rg,lo,hi,slo,shi,clg,flr,rg_ch,ma_st,ma_mt,ma_lt,lt_lo,lt_hi,st_lo,st_hi)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Moving Average Strategy"
+   ]
   }
  ],
  "metadata": {
