--- a/BollingerBand_Trade_Management.ipynb
+++ b/BollingerBand_Trade_Management.ipynb
@@ -6349,7 +6349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6399,20 +6399,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "ename": "TypeError",
-     "evalue": "strptime() takes exactly 2 arguments (1 given)",
+     "evalue": "strptime() argument 1 must be str, not Timestamp",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[23], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m bt \u001b[39m=\u001b[39m Backtest(dfpl, MyStrat, cash\u001b[39m=\u001b[39m\u001b[39m10000\u001b[39m, margin\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m\u001b[39m/\u001b[39m\u001b[39m100\u001b[39m, commission\u001b[39m=\u001b[39m\u001b[39m.000\u001b[39m)\n\u001b[1;32m----> 2\u001b[0m stat \u001b[39m=\u001b[39m bt\u001b[39m.\u001b[39;49mrun()\n\u001b[0;32m      3\u001b[0m stat\n",
+      "Cell \u001b[1;32mIn[26], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m bt \u001b[39m=\u001b[39m Backtest(dfpl, MyStrat, cash\u001b[39m=\u001b[39m\u001b[39m10000\u001b[39m, margin\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m\u001b[39m/\u001b[39m\u001b[39m100\u001b[39m, commission\u001b[39m=\u001b[39m\u001b[39m.000\u001b[39m)\n\u001b[1;32m----> 2\u001b[0m stat \u001b[39m=\u001b[39m bt\u001b[39m.\u001b[39;49mrun()\n\u001b[0;32m      3\u001b[0m stat\n",
       "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python311\\site-packages\\backtesting\\backtesting.py:1170\u001b[0m, in \u001b[0;36mBacktest.run\u001b[1;34m(self, **kwargs)\u001b[0m\n\u001b[0;32m   1167\u001b[0m         \u001b[39mbreak\u001b[39;00m\n\u001b[0;32m   1169\u001b[0m     \u001b[39m# Next tick, a moment before bar close\u001b[39;00m\n\u001b[1;32m-> 1170\u001b[0m     strategy\u001b[39m.\u001b[39;49mnext()\n\u001b[0;32m   1171\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m   1172\u001b[0m     \u001b[39m# Close any remaining open trades so they produce some stats\u001b[39;00m\n\u001b[0;32m   1173\u001b[0m     \u001b[39mfor\u001b[39;00m trade \u001b[39min\u001b[39;00m broker\u001b[39m.\u001b[39mtrades:\n",
-      "Cell \u001b[1;32mIn[22], line 12\u001b[0m, in \u001b[0;36mMyStrat.next\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[39msuper\u001b[39m()\u001b[39m.\u001b[39mnext()\n\u001b[0;32m     11\u001b[0m \u001b[39mfor\u001b[39;00m j \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m0\u001b[39m, \u001b[39mlen\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39morders)):\n\u001b[1;32m---> 12\u001b[0m     \u001b[39mif\u001b[39;00m (datetime\u001b[39m.\u001b[39;49mstrptime(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mdata\u001b[39m.\u001b[39;49mindex[\u001b[39m-\u001b[39;49m\u001b[39m1\u001b[39;49m])\u001b[39m-\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mordertime[\u001b[39m0\u001b[39m]) \u001b[39m>\u001b[39m \u001b[39m10\u001b[39m:\u001b[39m#days max to fulfill the order!!!\u001b[39;00m\n\u001b[0;32m     13\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39morders[\u001b[39m0\u001b[39m]\u001b[39m.\u001b[39mcancel()\n\u001b[0;32m     14\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mordertime\u001b[39m.\u001b[39mpop(\u001b[39m0\u001b[39m)\n",
-      "\u001b[1;31mTypeError\u001b[0m: strptime() takes exactly 2 arguments (1 given)"
+      "Cell \u001b[1;32mIn[25], line 12\u001b[0m, in \u001b[0;36mMyStrat.next\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[39msuper\u001b[39m()\u001b[39m.\u001b[39mnext()\n\u001b[0;32m     11\u001b[0m \u001b[39mfor\u001b[39;00m j \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m0\u001b[39m, \u001b[39mlen\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39morders)):\n\u001b[1;32m---> 12\u001b[0m     \u001b[39mif\u001b[39;00m (datetime\u001b[39m.\u001b[39;49mstrptime(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mdata\u001b[39m.\u001b[39;49mindex[\u001b[39m-\u001b[39;49m\u001b[39m1\u001b[39;49m], \u001b[39m'\u001b[39;49m\u001b[39m%\u001b[39;49m\u001b[39mY-\u001b[39;49m\u001b[39m%\u001b[39;49m\u001b[39mm-\u001b[39;49m\u001b[39m%d\u001b[39;49;00m\u001b[39m \u001b[39;49m\u001b[39m%\u001b[39;49m\u001b[39mH:\u001b[39;49m\u001b[39m%\u001b[39;49m\u001b[39mM:\u001b[39;49m\u001b[39m%\u001b[39;49m\u001b[39mS\u001b[39;49m\u001b[39m'\u001b[39;49m)\u001b[39m-\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mordertime[\u001b[39m0\u001b[39m]) \u001b[39m>\u001b[39m \u001b[39m10\u001b[39m:\u001b[39m#days max to fulfill the order!!!\u001b[39;00m\n\u001b[0;32m     13\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39morders[\u001b[39m0\u001b[39m]\u001b[39m.\u001b[39mcancel()\n\u001b[0;32m     14\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mordertime\u001b[39m.\u001b[39mpop(\u001b[39m0\u001b[39m)\n",
+      "\u001b[1;31mTypeError\u001b[0m: strptime() argument 1 must be str, not Timestamp"
      ]
     }
    ],
